--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: 'Open Sans', sans-serif;
+$base-font-family: 'Pt Serif', sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
@@ -115,6 +115,7 @@ div.content {
  margin: 0;
  padding-bottom: 5px;
  line-height: 1.75em;
+ font-family
 }
 a:hover {
  text-decoration: none;
